// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputSelect > should render input select component > expected html 1`] = `
<div>
  <div
    data-testid="input-some-id"
    id="input-some-id"
  >
    <label
      class="block mb-2"
      for="some-id"
      id="input-some-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <select
      aria-invalid="false"
      aria-labelledby="input-some-id-label"
      class="block rounded-lg border-gray-500 focus:border-blue-500 focus:outline-none focus:ring focus:ring-blue-500 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
      data-testid="input-some-id-test"
      id="some-id"
      name="test"
    >
      <option
        data-testid="some-id-select-option-0"
        id="some-id-select-option-0"
        selected=""
        value="first"
      >
        first option
      </option>
      <option
        data-testid="some-id-select-option-1"
        id="some-id-select-option-1"
        value="second"
      >
        second option
      </option>
    </select>
  </div>
</div>
`;

exports[`InputSelect > should render input select component with error message > expected html 1`] = `
<div>
  <div
    data-testid="input-some-id"
    id="input-some-id"
  >
    <label
      class="block mb-2"
      for="some-id"
      id="input-some-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <p
      class="mb-2"
    >
      <span
        class="inline-block max-w-prose border-l-2 border-red-600 bg-red-50 px-3 py-1"
        data-testid="input-error-test-id"
        id="input-some-id-error"
        role="alert"
      >
        error message
      </span>
    </p>
    <select
      aria-errormessage="input-some-id-error"
      aria-invalid="true"
      aria-labelledby="input-some-id-label"
      class="block rounded-lg focus:outline-none focus:ring disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 border-red-500 focus:border-red-500 focus:ring-red-500"
      data-testid="input-some-id-test"
      id="some-id"
      name="test"
    >
      <option
        data-testid="some-id-select-option-0"
        id="some-id-select-option-0"
        selected=""
        value="first"
      >
        first option
      </option>
      <option
        data-testid="some-id-select-option-1"
        id="some-id-select-option-1"
        value="second"
      >
        second option
      </option>
    </select>
  </div>
</div>
`;

exports[`InputSelect > should render input select component with help message > expected html 1`] = `
<div>
  <div
    data-testid="input-some-id"
    id="input-some-id"
  >
    <label
      class="block mb-2"
      for="some-id"
      id="input-some-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <select
      aria-describedby="input-some-id-help"
      aria-invalid="false"
      aria-labelledby="input-some-id-label"
      class="block rounded-lg border-gray-500 focus:border-blue-500 focus:outline-none focus:ring focus:ring-blue-500 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
      data-testid="input-some-id-test"
      id="some-id"
      name="test"
    >
      <option
        data-testid="some-id-select-option-0"
        id="some-id-select-option-0"
        selected=""
        value="first"
      >
        first option
      </option>
      <option
        data-testid="some-id-select-option-1"
        id="some-id-select-option-1"
        value="second"
      >
        second option
      </option>
    </select>
    <span
      class="block max-w-prose text-gray-500 mt-2"
      data-testid="input-some-id-select-help"
      id="input-some-id-help"
    >
      help message
    </span>
  </div>
</div>
`;

exports[`InputSelect > should render input select component with required > expected html 1`] = `
<div>
  <div
    data-testid="input-some-id"
    id="input-some-id"
  >
    <label
      class="block mb-2"
      for="some-id"
      id="input-some-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
       
      <span
        aria-hidden="true"
      >
        (
        input-label.required
        )
      </span>
    </label>
    <select
      aria-invalid="false"
      aria-labelledby="input-some-id-label"
      aria-required="true"
      class="block rounded-lg border-gray-500 focus:border-blue-500 focus:outline-none focus:ring focus:ring-blue-500 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
      data-testid="input-some-id-test"
      id="some-id"
      name="test"
      required=""
    >
      <option
        data-testid="some-id-select-option-0"
        id="some-id-select-option-0"
        selected=""
        value="first"
      >
        first option
      </option>
      <option
        data-testid="some-id-select-option-1"
        id="some-id-select-option-1"
        value="second"
      >
        second option
      </option>
    </select>
  </div>
</div>
`;
